assgn, lectures, labs

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -6,9 +6,30 @@ html {
 }
 
 body {
+    background-color: transparent !important;
+    background-position: right; 
+}
+
+.index_main {
     background-image: url('../images/lizard.jpg');
     /*background-color: #cccccc;*/  
 }
+
+.assign_main {
+    background-image: url('../images/happy_lizard.jpg');
+    /*background-color: #cccccc;*/  
+}
+
+.lectures_main {
+    background-image: url('../images/green_lizard.jpg');
+    /*background-color: #cccccc;*/  
+}
+
+.labs_main {
+    background-image: url('../images/blue_lizard.jpg');
+    /*background-color: #cccccc;*/  
+}
+
 .small-caps {
     font-variant: small-caps;
 }
@@ -17,6 +38,7 @@ body {
     width: 100%;
     max-width: 2000px !important;
     padding: 10px 30px;
+    background-color: transparent !important;
     /*margin: 0 auto;*/
 }
 
@@ -29,6 +51,7 @@ body {
 }
 
 nav .container, footer .container {
+
     padding: 0 30px;
 }
 
@@ -41,20 +64,20 @@ h3 {
     margin-bottom: 15px;
 }
 
-h3.small-caps {
+/*h3.small-caps {
     font-size: 1.5em;
     text-transform: lowercase;
     font-weight: 500;
 }
-
+*/
 a, a:hover, a:active, a:focus {
-    color: #009933;
+    color: white;
 }
-
+/*
 .text-muted {
     opacity: 0.6;
     font-size: 0.9em;
-}
+}*/
 
 .footnote {
     margin-top: 30px;
@@ -78,10 +101,10 @@ a, a:hover, a:active, a:focus {
 }*/
 
 .navbar-default .navbar-nav > .active > a {
-    background-color: transparent !important;
+    background-color: gray;
 }
 
-.status {
+/*.status {
     display: none;
 }
 
@@ -95,7 +118,7 @@ a, a:hover, a:active, a:focus {
 
 .status.online i {
     color: #ffffff;
-}
+}*/
 
 /* Center the navigation */
 @media (min-width: 768px) {
@@ -115,11 +138,12 @@ a, a:hover, a:active, a:focus {
 /** view_top */
 
 .view_top {
+    /*padding-bottom: 25px;*/
     /*background-color: #009933;*/
-    background: url('../images/lizard.jpg');
+    /*background: url('../images/lizard.jpg');*/
     background-size: auto;
     background-attachment:fixed;
-    padding-bottom: 10px;
+    /*padding-bottom: 10px;*/
     font-family: "Trebuchet MS", Courier, monospace;
     font-style: italic;
 }
@@ -135,7 +159,7 @@ a, a:hover, a:active, a:focus {
 
     font-size: 4em;
     text-shadow: 2px 2px #009933;
-    margin-bottom: 15px;
+    /*margin-bottom: 15px;*/
 }
 
 .view_top.home h1 {
@@ -179,15 +203,47 @@ a, a:hover, a:active, a:focus {
     margin-bottom: 0;
 }*/
 
-.announcements .container {
+
+.announcements.container {
      background-color: transparent !important;
 }
 
 /** Lectures **/
 
-.lecture-table.container {
+.lectures_list table {
     background-color: white;
+    opacity:0.5;
+    font-size:18px;
+    background-image: linear-gradient(to bottom, black 0%, green 100%); /* the gradient */
+    background-origin: border-box; /* set background to start from border-box */
+    border-spacing: 5px; /* space between each cell */
+    border: 10px solid transparent; /* optional */
+    background-color: transparent !important;
+    /*font-color: red;*/
+    /*font-family: arial, sans-serif;*/
+    border-collapse: collapse;
+    width: 40%;
 }
+
+.labs_list table {
+    border-radius:20px;
+    opacity:0.5;
+    font-size:18px;
+    background-image: linear-gradient(to bottom, lightblue 0%, tan 100%); /* the gradient */
+    background-origin: border-box; /* set background to start from border-box */
+    border-spacing: 5px; /* space between each cell */
+    border: 10px solid transparent; /* optional */
+    background-color: transparent !important;
+    /*font-color: red;*/
+    /*font-family: arial, sans-serif;*/
+    border-collapse: collapse;
+    width: 30%;
+}
+
+.labs_view_top {
+    /*padding-bottom: 0px;*/
+}
+
 
 /** Assignments */
 
@@ -218,28 +274,48 @@ a, a:hover, a:active, a:focus {
     font-weight: bold;
 }
 
-table {
+.assignments_list table {
+    opacity:0.5;
+    font-size:18px;
+    background-image: linear-gradient(to bottom, red 0%, blue 100%); /* the gradient */
+    background-origin: border-box; /* set background to start from border-box */
+    border-spacing: 5px; /* space between each cell */
+    border: 10px solid transparent; /* optional */
+    background-color: transparent !important;
     /*font-color: red;*/
-    font-family: arial, sans-serif;
+    /*font-family: arial, sans-serif;*/
     border-collapse: collapse;
-    width: 40%;
+    width: 30%;
 }
 
-td, th {
-    border: 3px solid black;
-    text-align: center;
+th {
+    text-align: left;
     color: white;
-    /*padding: 8px;*/
+    /*background:gray;*/
+    /*background-color:rgba(255,222,0,0.8);*/
+}
+
+td {
+    padding-top: 15px;
+    /*border: 3px solid black;*/
+    text-align: left;
+    color: black;
+    /*background:gray;*/
+    /*background-color:rgba(255,222,0,0.5);*/
+    /*opacity:0.2;*/
+    background-color:rgba(255,225,205,0.5);
 }
 
 tr:nth-child(even) {
-    font-color: red;
-    /*background-color: #dddddd;*/
+    /*font-color: red;*/
+    /*background-color: gray;*/
+    opacity:0.8;
 }
 
-.table td ul {
+/*.table td ul {
     padding-left: 15px;
-}
+    padding-bottom: 15px;
+}*/
 
 
 /** Responsive Tables 
@@ -256,7 +332,7 @@ tr:nth-child(even) {
 
 /** News **/
 
-.news .container {
+.news.container {
     overflow: auto;
 }
 
